fix pagination layout shift

--- a/app/sharedComponents/Pagination.module.css
+++ b/app/sharedComponents/Pagination.module.css
@@ -2,6 +2,7 @@
     display: flex;
     column-gap: 0.5rem;
     justify-content: center;
+    width: 140px;
 }
 
 .paginationArrow {
